# Stride

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/: main.py
src/components/: __init__.py  analytics_charts.py  goal_card.py  goal_wizard.py  stat_card.py  task_card.py
src/constants/: __init__.py  design.py
src/models/: __init__.py  goal.py
src/services/: __init__.py  storage.py
src/utils/: __init__.py  color_utils.py  math_utils.py  time_utils.py
src/views/: __init__.py  analytics.py  planner.py
