[project]
name = "stride"
version = "0.1.0"
description = "Plan. Execute. Improve. Track your daily follow-through rate."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Rithesh", email = "you@example.com" }
]
dependencies = [
    "flet>=0.83.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.83.0",
    "flet-desktop>=0.83.0",
    "flet-web>=0.83.0",
]

[tool.flet]
org = "dev.stride"
product = "stride"
company = "Stride"
copyright = "Copyright (C) 2026 Stride"

[tool.flet.app]
path = "src"
