[project]
name = "stride"
version = "0.1.0"
description = "Plan. Execute. Improve. Track your daily follow-through rate."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Rithesh", email = "[EMAIL_ADDRESS]" }
]
dependencies = [
    "flet>=0.83.0"
]

[dependency-groups]
dev = [
    "flet-cli>=0.83.0",
    "flet-desktop>=0.83.0",
    "flet-web>=0.83.0",
]

[tool.flet]
org = "dev.stride"
product = "stride"
company = "Stride"
copyright = "Copyright (C) 2026 Stride"

[tool.flet.app]
path = "src"

[tool.flet.app.web]
name = "Stride"
short_name = "Stride"
description = "Plan. Execute. Improve. Track your daily follow-through rate."
theme_color = "#0B0F1A"
background_color = "#0B0F1A"

